--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -16,22 +16,22 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: 'Noto Sans Mono'
+    family: 'Mono'
     style: Regular
 
   # Bold font face
   bold:
-    family: 'Noto Sans Mono'
+    family: 'Mono'
     style: Bold
 
   # Italic font face
   italic:
-    family: 'Noto Sans Mono'
+    family: 'Mono'
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    family: 'Noto Sans Mono'
+    family: 'Mono'
     style: Bold Italic
 
   # Point size
