--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	editor = nvim
 [init]
-	defaultBranch = main
+	defaultBranch = master
 [credential]
 	helper = cache --timeout=3600
 [url "git@github.com:"]
