--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,5 +7,5 @@
 	defaultBranch = master
 [credential]
 	helper = cache --timeout=3600
-#[url "git@github.com:"]
-#	insteadOf = https://github.com/
+[url "git@github.com:"]
+	insteadOf = https://github.com/
