--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -95,7 +95,10 @@ ext s[wmf]c, has zsnes, X     = zsnes "$1"
 ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
 ext nes, has fceux, X         = fceux "$1"
 ext exe                       = wine "$1"
+# launch .stl with prusaslicer
+ext stl, flag f               = prusa-slicer -- "$@"
 name ^[mM]akefile$            = make
+
 
 #--------------------------------------------
 # Scripts
