--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -96,7 +96,8 @@ ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
 ext nes, has fceux, X         = fceux "$1"
 ext exe                       = wine "$1"
 # launch .stl with prusaslicer
-ext stl, flag f               = prusa-slicer -- "$@"
+ext stl flag f               = prusa-slicer -- "$@"
+ext 3mf flag f               = prusa-slicer -- "$@"
 name ^[mM]akefile$            = make
 
 
