--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = jami1063@colorado.edu
-	name = jmichael16
+	email = jake@vutility.com
+	name = jake-vu
 [core]
 	editor = nvim
 [init]
