update gitconfig new username

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
     #email = jake@vutility.com
     #name = jake-vu
     email = jami1063@colorado.edu
-    name = jmichael16
+    name = jmiv-afk
 [core]
 	editor = nvim
 [init]
