update alacritty cfg

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,13 @@
 [user]
-    #email = jake@vutility.com
-    #name = jake-vu
-    email = jami1063@colorado.edu
-    name = jmiv-afk
+    email = jake@vutility.com
+    name = jake-vu
+    #email = jami1063@colorado.edu
+    #name = jmiv-afk
 [core]
 	editor = nvim
 [init]
 	defaultBranch = master
 [credential]
 	helper = cache --timeout=3600
-[url "git@github.com:"]
-	insteadOf = https://github.com/
+#[url "git@github.com:"]
+#	insteadOf = https://github.com/
