--- a/kanshi/.config/kanshi/config
+++ b/kanshi/.config/kanshi/config
@@ -6,3 +6,23 @@
     output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
     output "Samsung Electric Company U28E510 HTPJ404775" enable mode 3840x2160@30Hz position 1536,0 scale 2.0
 }
+
+{
+    output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
+    output "Samsung Electric Company U28E590 HTPH606453" enable mode 3840x2160@30Hz position 1536,0 scale 2.0
+}
+
+{
+    output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
+    output "Goldstar Company Ltd LG Ultra HD 0x00008762" enable mode 3840x2160@30Hz position 1536,0 scale 1.75
+}
+
+{
+    output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
+    output "Samsung Electric Company C49RG9x HTRMA00411" enable mode 3840x1080@60Hz position 1536,0 scale 1.0
+}
+
+{
+    output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
+    output "Goldstar Company Ltd LG HDR DQHD 0x00005757" enable mode 3840x1080@59.996Hz position 1536,0 scale 1.0 
+}
