--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -5,7 +5,7 @@
 ### Variables
 set $mod Mod4
 set $term alacritty
-set $menu wofi --show drun -i 
+set $menu wofi --show drun --allow-images -i
 set $bg_left ~/pictures/backgrounds/minimalist_mountains.jpg
 set $bg_right ~/pictures/backgrounds/leviathan.png 
 set $save_screenshot grim -g ~/screenshots/scrn-$(date +"%Y-%m-%d_%H-%M-%S").png
@@ -21,13 +21,16 @@ set $right l
 
 ### Startup behavior
 exec --no-startup-id {
-  swaymsg "workspace 1; exec $term"
+  swaymsg "workspace 5; exec $term"
 }
 
 ## Output configuration
 # You can get the names of your outputs by running: swaymsg -t get_outputs 
-exec_always pkill kanshi; exec kanshi
-output * background $bg_right fill
+exec_always kanshi
+set $left_monitor "DP-4"
+set $right_monitor "DP-2"
+output $left_monitor background $bg_left fill
+output $right_monitor background $bg_right fill
 
 #output eDP-1 :
 #    fill scale 2.5
@@ -39,9 +42,9 @@ bindsym XF86MonBrightnessUp exec --no-startup-id /home/jmiv/bin/jm_backlight/bri
 bindsym XF86MonBrightnessDown exec --no-startup-id /home/jmiv/bin/jm_backlight/bright_down.sh
 
 ### Audio configuration
-bindsym --locked XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%
-bindsym --locked XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%
-bindsym --locked XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle
+bindsym --locked XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% 
+bindsym --locked XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym --locked XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym --locked XF86AudioPlay exec playerctl play-pause
 bindsym --locked XF86AudioNext exec playerctl next
 bindsym --locked XF86AudioPrev exec playerctl previous
@@ -53,11 +56,11 @@ bindsym $mod+Shift+S exec $clip_screenclip
 
 # Mouse settings
 input "1133:16505:Logitech_G_Pro" { 
-pointer_accel -0.7
+    pointer_accel -0.7
 }
 input "1267:32:Elan_TrackPoint" {
-pointer_accel -0.5
-scroll_factor 0.5 
+    pointer_accel -0.5
+    scroll_factor 0.5 
 }
 
 ### Input configuration
@@ -82,8 +85,8 @@ scroll_factor 0.5
 
 ### Idle configuration
 exec swayidle -w \
-    timeout 600 '$lock' \
-    timeout 660 'swaymsg "output * dpms off"' \
+    timeout 800 '$lock' \
+    timeout 1000 'swaymsg "output * dpms off"' \
     timeout 1800 'systemctl suspend' \
         resume 'swaymsg "output * dpms on"' \
     before-sleep 'sleep 3 && $lock'
@@ -110,6 +113,8 @@ exec swayidle -w \
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
+
+
 #
 # Workspaces:
 #
@@ -135,6 +140,19 @@ exec swayidle -w \
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
+
+# set which workspaces display on which monitors
+workspace 1 output $left_monitor $right_monitor
+workspace 2 output $left_monitor $right_monitor
+workspace 3 output $left_monitor $right_monitor
+workspace 4 output $left_monitor $right_monitor
+workspace 5 output $right_monitor 
+workspace 6 output $right_monitor
+workspace 7 output $right_monitor
+workspace 8 output $right_monitor
+workspace 9 output $right_monitor
+workspace 10 output $right_monitor
+
 #
 # Layout stuff:
 #
