--- a/kanshi/.config/kanshi/config
+++ b/kanshi/.config/kanshi/config
@@ -1,10 +1,10 @@
 {
-    output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
+    output "Goldstar Company Ltd 27GL850 005NTZN7V717" enable mode 2560x1440@144Hz position 1536,0 scale 1.2
+    output "Dell Inc. DELL U2715H H7YCC6B806JS" enable mode 2560x1440@60Hz position 0,0 scale 1.2 transform 90
 }
 
 {
     output eDP-1 enable mode 3840x2160@60.000Hz position 0,0 scale 2.5
-    output "Samsung Electric Company U28E510 HTPJ404775" enable mode 3840x2160@30Hz position 1536,0 scale 2.0
 }
 
 {
