--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -5,7 +5,7 @@
 ### Variables
 set $mod Mod4
 set $term alacritty
-set $menu wofi --show drun --allow-images -i
+set $menu wofi --show drun,run --allow-images -i
 set $bg_left ~/pictures/backgrounds/minimalist_mountains.jpg
 set $bg_right ~/pictures/backgrounds/leviathan.png 
 set $save_screenshot grim -g ~/screenshots/scrn-$(date +"%Y-%m-%d_%H-%M-%S").png
