migrate to using shikane

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -8,6 +8,7 @@ set $term alacritty
 set $menu wofi --show drun,run -i 
 set $bg_left ~/pictures/backgrounds/james_webb_cosmic_cliffs.jpg
 set $bg_right ~/pictures/backgrounds/james_webb_cosmic_cliffs_ultrawide.jpg 
+#set $bg_right ~/pictures/backgrounds/snowmass_pano.jpeg 
 set $save_screenshot grim -g ~/screenshots/scrn-$(date +"%Y-%m-%d_%H-%M-%S").png
 set $save_screenclip slurp | grim -g - ~/screenshots/scrn-$(date +"%Y-%m-%d_%H-%M-%S").png 
 set $clip_screenclip exec grim -g "$(slurp)" - | wl-copy 
@@ -21,18 +22,24 @@ set $right l
 
 ### Startup behavior
 exec --no-startup-id {
-  swaymsg "workspace 1; exec $term"
+    swaymsg "workspace 1; exec $term"
 }
 
 ## Output configuration
 # You can get the names of your outputs by running: swaymsg -t get_outputs 
-exec_always pkill kanshi; exec kanshi
-output * background $bg_right fill
+exec_always pkill shikane; exec shikane 
+output * background $bg_right fill 
+
+exec_always pkill udiskie; exec udiskie --no-automount --notify --tray
 
 #output eDP-1 :
 #    fill scale 2.5
 #output HDMI-A-1 bg $bg_right fill scale 2 
 #output "Dell Inc. DELL U2715H H7YCC6B806JS" bg $bg_left fill
+
+# HiDPi mouse scaling issue: 
+# https://github.com/swaywm/sway/issues/6931
+seat seat0 xcursor_theme Adwaita
 
 ### BACKLIGHT commands
 bindsym XF86MonBrightnessUp exec --no-startup-id /home/jmiv/bin/jm_backlight/bright_up.sh
